src/components/UI/ContactForm/ContactForm.css
.home-contact {
  background: rgb(19, 9, 69);
  background: linear-gradient(180deg, rgba(19, 9, 69, 1) 0%, rgba(52, 32, 121, 1) 100%);
  width: 100%;
  position: relative;
  padding: 150px 0 75px 0;
}

.home-contact-bg {
  background: url("../../../assets/images/bg.svg");
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.home-contact-wave {
  background: url("../../../assets/images/project-wave-top.svg") no-repeat;
  position: absolute;
  height: 90px;
  top: -25px;
  width: 100%;
}

.home-contact-container {
  max-width: 1200px;
  padding: 25px;
  width: 100%;
  margin: 0 auto;
  align-items: stretch !important;
  z-index: 5;
}

.home-contact-text {
  flex-direction: column;
  align-items: flex-start !important;
  flex: 1;
  padding-right: 1rem;
}

.home-contact-form {
  flex: 1;
  padding-left: 1rem;
}

.home-contact-text h2,
.home-contact-text p {
  margin-right: auto;
  text-align: left;
}

.home-contact-header {
  color: #fff;
  font-weight: 700;
  font-size: 4rem;
  margin-bottom: 0.4rem;
}

.home-contact-lead {
  font-size: 1.4rem;
  color: #a5a5a5;
  max-width: 460px;
}

.home-contact-media {
  margin-top: 1.2rem;
}

.home-contact-media p,
.home-contact-media svg,
.home-contact-media a {
  color: #fff;
  font-size: 1.4rem;
}

.home-contact-media p,
.home-contact-media a {
  margin-left: 1.6rem;
}

.home-contact-form label {
  color: #fff;
  font-weight: bold;
  font-size: 1.6rem;
  margin-bottom: 0.2rem;
}

.home-contact-form input {
  width: 100%;
  margin-right: auto;
  color: #fff;
  padding: 8px 0;
  text-align: left;
  background: none;
  outline: none;
  border: none;
  border-bottom: 2px solid #fff;
  font-size: 1.2rem;
}

.home-contact-media-container {
  margin-top: auto;
}

.home-contact-form input::placeholder {
  color: #a5a5a5;
  font-size: 1.2rem;
}

.home-contact-form > div:nth-child(2) {
  margin: 2.5rem 0;
}

.home-contact-form-top > div {
  flex: 1;
  padding-right: 1.5rem;
}

.home-contact-form button {
  width: 100%;
}

.home-contact-form button svg {
  margin-right: 1rem;
}

.home-contact-input-wrapper {
  flex-direction: column;
  align-items: flex-start !important;
}

.error-text {
  color: #ff0001;
  text-align: left;
  font-weight: 600;
  padding-top: 6px;
}

.home-contact-media a:hover {
  color: rgb(216, 216, 216);
}

.loading:after {
  display: inline-block;
  position: absolute;
  width: 1px;
  animation: dotty steps(1, end) 1.4s infinite;
  content: "";
}

@keyframes dotty {
  0% {
    content: "";
  }
  25% {
    content: ".";
  }
  50% {
    content: "..";
  }
  75% {
    content: "...";
  }
  100% {
    content: "";
  }
}

@media (max-width: 1200px) {
  .home-contact {
    padding: 75px 0 0 0;
  }

  .home-contact-container {
    flex-direction: column;
  }

  .home-contact-form {
    padding: 0;
  }

  .home-contact-text {
    align-items: center !important;
    padding: 0;
    margin-bottom: 3rem;
  }

  .home-contact-header,
  .home-contact-lead {
    text-align: center !important;
    margin-left: auto;
    max-width: none;
  }

  .home-contact-lead {
    margin-bottom: 2rem;
  }

  .home-contact-form-top {
    flex-direction: column;
  }

  .home-contact-form-top > div {
    width: 100%;
    margin-bottom: 2.5rem;
    padding: 0;
  }

  .home-contact-form > div:nth-child(2) {
    margin: 0 0 2.5rem 0;
  }

  .home-contact-media-container {
    display: flex;
    flex-wrap: wrap;
  }

  .home-contact-media-container > div {
    padding: 0 1rem;
    margin: 0 auto 0.5rem auto;
  }

  .home-contact-media p,
  .home-contact-media a {
    margin-left: 0.8rem;
    word-break: break-all;
  }
}

@media (max-width: 1400px) {
  .home-contact-wave {
    background: url("../../../assets/images/project-wave-top-2.svg") no-repeat;
    top: -20px;
  }
}

@media (max-width: 500px) {
  .home-contact-header {
    font-size: 2rem;
  }

  .home-contact-lead {
    font-size: 1.2rem;
  }

  .home-contact-media p,
  .home-contact-media svg,
  .home-contact-media a {
    font-size: 1.2rem;
  }
}

